# agent-profile

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  DESIGN.md  Dockerfile  README.md  SKILL.md  STAGING.md  STATUS.md  docker-compose.yml  openapi.json
.github/workflows/: ci.yml  publish-sdk.yml
examples/: nanook_profile.py  register_and_setup.py  verify_identity.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  theme-config.ts
frontend/src/components/: AddressDisplay.tsx  Avatar.tsx  CSSParticleEffect.tsx  CryptoAddresses.tsx  Endorsements.tsx  Links.tsx  ParticleEffect.tsx  ParticleToggle.tsx  PickerModal.tsx  ProfileScore.tsx  Sections.tsx  SimilarProfiles.tsx  Skills.tsx  ThemeToggle.tsx  Tooltip.tsx  TooltipLink.tsx  format.ts  scenes.ts
frontend/src/types/: profile.ts
scripts/: seed-demos.sh
sdk/python/: CHANGELOG.md  README.md  agent_profile.py  pyproject.toml  test_sdk.py
sdk/python/agent_profile/: __init__.py  cli.py  client.py  exceptions.py
sdk/python/tests/: test_client.py
src/: assets.rs  cors.rs  db.rs  lib.rs  main.rs  models.rs  ratelimit.rs  security.rs
src/routes/: html.rs  mod.rs  profiles.rs
tests/: integration.rs
