[package]
name = "agent-profile"
version = "0.8.0"
edition = "2021"
description = "Agent 'About Me' Profile Pages — canonical identity pages for AI agents"

[lib]
name = "agent_profile"
path = "src/lib.rs"

[[bin]]
name = "agent-profile"
path = "src/main.rs"

[dependencies]
rocket = { version = "0.5", features = ["json"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
once_cell = "1"
k256 = { version = "0.13", features = ["ecdsa"] }
rand = "0.8"
rust-embed = { version = "8", features = ["compression"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
