[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-profile"
version = "0.1.0"
description = "Python SDK for the Agent Profile Service — canonical identity pages for AI agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["agent", "ai", "identity", "profile", "openclaw"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-httpx>=0.21.0",
    "respx>=0.20.0",
]

[project.scripts]
agent-profile = "agent_profile.cli:main"

[project.urls]
Homepage = "https://github.com/Humans-Not-Required/agent-profile"
Repository = "https://github.com/Humans-Not-Required/agent-profile"
Documentation = "https://github.com/Humans-Not-Required/agent-profile/tree/main/sdk/python"
Changelog = "https://github.com/Humans-Not-Required/agent-profile/blob/main/sdk/python/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["agent_profile"]

[tool.pytest.ini_options]
testpaths = ["tests"]
